# tevel_cmake

./: .gdbinit  CMakeLists.txt  launch-gdb.sh  launch-jlink.sh  toolchain.cmake
hal/demo/src/: main.c
satellite-subsystems/demo/src/: main.c
satellite-subsystems/demo/src/Demos/: GomEPSdemo.c  GomEPSdemo.h  IsisTRXVUdemo.c
src/: FRAM_FlightParameters.h  GlobalStandards.h  InitSystem.h  TLM_management.h  TLM_managment.c  initSystem.c  main.c  utils.c  utils.h
src/SubSystemModules/Communication/: AckHandler.c  AckHandler.h  CommandDictionary.c  SPL.h  SatCommandHandler.c  SatCommandHandler.h  TRXVU.c  TRXVU.h
src/SubSystemModules/Communication/SubsystemCommands/: EPS_Commands.c  EPS_Commands.h  Maintanence_Commands.h  TRXVU_Commands.c  TRXVU_Commands.h
src/SubSystemModules/Housekepping/: TelemetryCollector.c  TelemetryCollector.h
src/SubSystemModules/Maintenance/: Maintenance.c  Maintenance.h
src/SubSystemModules/PowerManagment/: EPS.c  EPS.h  EPSOperationModes.c  EPSOperationModes.h
src/TestingDemos/: MainTest.c  TrxvuTestingDemo.c
